# native-msal-cpp-windows64

./: .clang-format  .gitignore  LICENSE  README.md  meson.build  meson_options.txt
sources/: msal_acquire_token_interactively.cpp  msal_acquire_token_silently.cpp  msal_signin.cpp  msal_signin_interactive.cpp  msal_signin_silently.cpp  msal_signout_silently.cpp  utils.hpp
subprojects/: msalruntime-darwin-aarch64.wrap  msalruntime-darwin-x86_64.wrap  msalruntime-windows-x86.wrap  msalruntime-windows-x86_64.wrap  msalruntime.wrap
subprojects/packagefiles/pymsalruntime-0.14.0/: meson.build
subprojects/packagefiles/pymsalruntime-0.18.0/: meson.build  msalruntime_gen_lib.bat
subprojects/packagefiles/pymsalruntime-0.18.0/build_resources/: MSALRuntime.h  MSALRuntimeAccount.h  MSALRuntimeAuthParameters.h  MSALRuntimeAuthResult.h  MSALRuntimeCancel.h  MSALRuntimeDiscoverAccountsResult.h  MSALRuntimeError.h  MSALRuntimeLogging.h  MSALRuntimeReadAccountResult.h  MSALRuntimeSignoutResult.h  MSALRuntimeTypes.h
